--- a/DID_AMLO.Rmd
+++ b/DID_AMLO.Rmd
@@ -1,14 +1,10 @@
 ---
-title: "¿AMLO redujo los homicidios en la CDMX?"
+title: "Explicando los cambios en homicidios en la CDMX"
 author: "Patricio R. Estevez Soto"
 date: "23/04/2018"
 output:
-  pdf_document:
-      keep_tex: true
-  html_document: null
+  html_document: default
 pandoc_args: --smart
-email: patricio.estevez.14@ucl.ac.uk
-twitter: '@prestevez'
 ---
 
     ```{r setup, include=FALSE}
@@ -22,45 +18,17 @@ knitr::opts_chunk$set(echo = FALSE,
                       include=FALSE)
 ```
 
-El primer debate entre los candidatos a la presidencia de México se celebró el 23 de abril de 2018. Uno de los temas de este debate---y de hecho uno que preocupa a gran parte de la sociedad mexicana---fue la seguridad pública. La primera pregunta que debieron responder los candidatos fue:
+Evaluar la efectividad de las políticas públicas es una de las actividades más complicadas en las ciencias sociales. En el caso de la incidencia delictiva, es necesario medir los efectos de una política en la cantidad de delitos registrados, al mismo tiempo que se controla por otras variables que pudieran haber afectado al fenómeno en cuestión. En particular, es crucial comparar la incidencia observada antes y después de la intervención, de lo contrario no se puede descartar si la incidencia hubiese disminuido en ausencia de la intervención. Por otra parte, también se debe descartar la influencia de factores externos a la intervención. Normalmente esto se logra comparando los cambios en la incidencia delictiva en una zona que recibió la intervención de política pública con una que no la recibió.
 
->¿Qué medidas tomará usted como Presidente de la República para combatir la  violencia y qué le hace pensar que tendrá éxito donde todos los demás han fracasado?
+La discusión sobre la atribución del éxito (o fracaso) de la política pública en la incidencia delictiva ha cobrado relevancia en los últimos días. En el primer debate entre los candidatos a la presidencia de México, Andrés Manuel López Obrador argumentó que su administración como Jefe de Gobierno de la Ciudad de México (Dic 2000 -- Jul 2005) fue exitosa en la reducción de los delitos, citando una reducción del 38% en secuestros, así como reducciones en robo de vehículos con violencia y homicidios. A su vez, Ricardo Anaya argumentó que "por cada 100 casos en el país, los secuestros (en la Ciudad de México) crecieron 88%".
 
-Andrés Manuel López Obrador, candidato de la coalición "Juntos Haremos Historia", hizo referencia a la reducción en la incidencia delictiva en la Ciudad de México durante su administración como Jefe de Gobierno (Dic 2000 -- Jul 2005):
+Como bien [ya argumentaron otros analistas](http://www.eluniversal.com.mx/columna/alejandro-hope/nacion/amlo-anaya-y-los-secuestros), ambas cifras son ciertas, pero están plagadas de problemas. Por un lado, la cifra de Anaya se refiere al cambio en la participación de las denuncias de secuestro en la Ciudad de México en comparación con el resto del país, por lo que hablar de un "crecimiento" en la incidencia delictiva puede resultar confuso. Por el otro, la cifra de López Obrador no considera la tendencia antes de su  mandato, ni descarta la influencia de influencias externas. De cualquier forma, la discusión sobre el secuestro se basa en datos de *denuncias*, las cuales tienen una cifra negra (porcentaje de delitos no denunciados) de 98%. Por lo que es realmente imposible saber si los secuestros realmente subieron o bajaron durante el mandato de López Obrador.
 
->Yo he tenido éxito. Fui Jefe de Gobierno de esta ciudad, y reduje la incidencia delictiva, y existen los datos oficiales que respaldan mi dicho. Bajó en el tiempo que fui jefe de gobierno el robo de vehículo con violencia y bajó también el delito de homicidio en el tiempo que fui, voy a dar un dato: en el último año de mi gobierno, 2005, 684 homicidios, el año pasado en la Ciudad de México, 1084 homicidios y si comparamos lo que ha sucedido a nivel nacional desde luego que fue exitosa nuestra experiencia. -- López Obrador
+En contraste, las estadísticas de homicidio tienden a ser mucho más confiables. Por ello, la incidencia de homicidio sí permite realizar una análisis más certero para juzgar la efectividad del gobierno de López Obrador en materia de seguridad. En un análisis de [abril 4](https://www.animalpolitico.com/2018/04/sube-o-baja-la-violencia-estos-son-los-datos-de-seguridad-en-la-cdmx-desde-lopez-obrador-hasta-mancera/) se encontró que López Obrador redujo la tasa de homicidio en la Ciudad de México en 8%. Sin embargo, esta comparación no toma en cuenta la tendencia natural de la incidencia (lo que ocurría antes de que López Obrador llegara al poder), ni las influencias externas que pudieran afectar la incidencia de homicidio en la Ciudad de México.
 
-La aseveración de López Obrador fue cuestionada por sus contrincantes, quienes aseguraron que el gobierno de López Obrador fue "uno de los peores," enfatizando las cifras de secuestros, y la respuesta de la sociedad civil que organizó una marcha multitudinaria para protestar por la inseguridad. [Verificado 2018](https://verificado.mx/que-es-verificado-2018/) revisó las [frases y aseveraciones que hicieron los candidatos](https://verificado.mx/verdades-mentiras-candidatos-seguridad-violencia-debate/) en materia de seguridad durante el primer debate. En el tema de la incidencia delictiva en la Ciudad de México durante el mandato de López Obrador, comentó:
+Por tanto, sin un análisis más riguroso de los datos de homicidio, no es posible determinar si las reducciones observadas en el número de delitos fueron consecuencia de las acciones del gobierno de Lopez Obrador, o si se debieron a factores externos a su administración.
 
->El equipo de Verificado 2018 revisó las cifras oficiales delictivas de 2000 a 2005 y encontramos que efectivamente Andrés Manuel logró bajar el número de secuestros en la capital... Además, la incidencia delictiva bajó 12.87% durante el mandato de Andrés Manuel López Obrador. De 176 mil 747 delitos a 153 mil 977. Esto incluye delitos patrimoniales, delitos sexuales, homicidios, lesiones, secuestro, robo común, robo de ganado, robo en carretera, robo en instituciones bancarias y otros delitos. -- [Verificado 2018](https://verificado.mx/verdades-mentiras-candidatos-seguridad-violencia-debate/)
-
-No disputo que las cifras oficiales efectivamente reflejen que la incidencia delictiva *en la Ciudad de México* haya disminuido durante la gestión de López Obrador. Sin embargo, lo que sí es preocupante, es que automáticamente se asuma que dicha disminución sea un efecto directo del gobierno de la Ciudad de México. Por ejemplo, [Patricio Solís](https://twitter.com/psolisaqui), del Colmex, aseguró que:
-
->AMLO puede afirmar que entre 2001 y 2005 la tasa de secuestros (según las cifras reportadas) disminuyó, porque efectivamente fue así. Puede incluso atribuirlo a su experiencia. Eso es parte de las licencias de la política, si bien en un medio académico matizamos y demandamos más evidencia por la dificultad de las imputaciones de causalidad. -- [Patricio Solís](https://twitter.com/psolisaqui/status/988592683542286342)
-
-Por tanto, si aceptáramos dicha "licencia política," ¿de qué sirve hacer evaluación de política pública? ¿Es solo un ejercicio académico condenado a permanecer oculto en *Journals* de paga? Al contrario, es precisamente en la política cotidiana donde es crucial apoyarnos en evaluaciones serias y rigurosas para poder determinar si quienes pretenden gobernarnos pueden adjudicarse los resultados que presumen. De no hacerlo, seguiremos votando a ciegas.
-
-Por tanto, sin un análisis más riguroso de los datos de la incidencia delictiva, no es posible determinar si las reducciones observadas en el número de delitos fueron consecuencia de las acciones del gobierno de Lopez Obrador, o si se debieron a factores externos a su administración.
-
-# Investigando la causalidad
-
-Evaluar la efectividad de las políticas públicas es una de las actividades más complicadas en las ciencias sociales. En el caso de la incidencia delictiva, es necesario medir el efecto de la política implementada en la cantidad de delitos registrados, al mismo tiempo que se controla por otras variables que pudieran haber afectado al fenómeno en cuestión.
-
-La aseveración de López Obrador en la que se adjudica la reducción de la violencia en la Ciudad de México es problemática por lo siguiente:
-
-- *Se enfoca en el cambio en la incidencia delictiva solamente durante el período en el que fue Jefe de Gobierno.*
-
-¿Cómo sabemos que la incidencia delictiva no habría disminuido si López Obrador no hubiese ganado la jefatura de gobierno? No basta con medir los cambios durante el período de gobierno, para poder descartar la tendencia "natural" del fenómeno delictivo, es crucial medir también los cambios en la incidencia delictiva antes, durante y después del gobierno de López Obrador.
-
-- *No considera el cambio en la incidencia delictiva en otros estados del país*.
-
-¿Cómo sabemos que la reducción en la incidencia delictiva se debió a las acciones del gobierno de López Obrador en la Ciudad de México, y no a cambios externos que afectaron a otros estados del país? Para descartar el efecto de fenómenos externos, no basta con medir los cambios en la incidencia delictiva en la Ciudad de México, es necesario comparar esos cambios con las tendencias en una zona de control comparable donde no haya gobernado López Obrador.
-
-# Este estudio
-
-Este estudio busca responder a estas preguntas en el espíritu de contribuir a la---indispensable---discusión pública sobre las políticas de seguridad en México utilizando datos y análisis rigurosos. En ese sentido le sigue al buen esfuerzo que realizaron [Oscar Elton](https://twitter.com/OscarElton88), [Andrés Lajous](https://twitter.com/andreslajous), y [José Merino](https://twitter.com/PPmerino) en su análisis del [efecto de las fotomultas en los accidentes viales en la Ciudad de México](https://medium.com/@andreslajous/cámaras-y-radares-para-fotomultas-ni-son-todas-las-que-están-ni-están-todas-las-que-son-72bd44c38a9a).
-
-Específicamente, este estudio investiga el efecto del gobierno de López Obrador en los homicidios dolosos en la Ciudad de México. Se restringió el análisis a homicidios por dos razones: 1) es sin duda uno de los delitos más graves que puede sufrir una persona, y por extensión la sociedad; y 2) las estadísticas oficiales del homicidio tienden a ser de mucha mejor calidad que delitos como el secuestro o la extorsión, puesto que no sufre de una cifra negra tan alta como estos.
+Este artículo investiga el efecto del gobierno de López Obrador en los homicidios dolosos en la Ciudad de México. Se restringió el análisis a homicidios por dos razones: 1) es sin duda uno de los delitos más graves que puede sufrir una persona, y por extensión la sociedad; y 2) las estadísticas oficiales del homicidio tienden a ser de mucha mejor calidad que delitos como el secuestro o la extorsión, puesto que no sufre de una cifra negra tan alta como estos.
 
 Se utilizaron [los conteos mensuales de homicidios por estado que reporta el Secretariado Ejecutivo del Sistema Nacional de Seguridad Pública](http://secretariadoejecutivo.gob.mx/incidencia-delictiva/incidencia-delictiva-fuero-comun.php) de enero 1998 a octubre de 2017.
 
@@ -113,12 +81,12 @@ homicidioslong %>%
 homicidioslong1[-which(homicidioslong1$AÑO == 2017 &
                            homicidioslong1$mes %in% c("NOVIEMBRE", "DICIEMBRE")), ] -> homicidioslong2
 
-homicidioslong2$CDMX <- homicidioslong2$ENTIDAD
+homicidioslong2$I <- homicidioslong2$ENTIDAD
 
 # CDMX dummy
 
-levels(homicidioslong2$CDMX)[-7] <- "Resto del país"
-levels(homicidioslong2$CDMX)[2] <- "CDMX"
+levels(homicidioslong2$I)[-7] <- "Resto del país"
+levels(homicidioslong2$I)[2] <- "CDMX"
 
 ## Periodo de gobierno de AMLO
 
@@ -164,7 +132,7 @@ basepryentMX$entidad <- as.factor(basepryentMX$entidad)
 basepryentMX$cvegeo <- as.factor(basepryentMX$cvegeo)
 
 basepryentMX %>%
-    filter(año > 1997 & año < 2018) %>%
+    filter(año > 1996 & año < 2019) %>%
     group_by(año, entidad, id_ent) %>%
     summarise(poblacion = sum(pob)) -> poblacionestado
 
@@ -174,55 +142,107 @@ poblacionestado %>%
 names(poblacionestado)[c(1,3)] <- c("AÑO", "INEGI")
 poblacionestado <- poblacionestado[,-2]
 
-inner_join(homicidioslong2, poblacionestado) -> homicidiosfinal
+# Población por mes*
+
+newpob2 <- list()
+
+for(i in 1:32)
+{
+    newpob2[[i]] <- subset(poblacionestado, poblacionestado$INEGI == i)
+}
+
+for(i in 1:32)
+{
+    for(k in 1:(nrow(newpob2[[i]]) - 1))
+    {
+     newpob2[[i]][k,4] <- (newpob2[[i]][k+1,"poblacion"] - newpob2[[i]][k,"poblacion"])/12
+    }
+}
+
+newpob2 <- lapply(newpob2, function(x) x[,c(1,2,4,3)])
+
+for(s in 1:32)
+{
+    for(a in 1:11)
+    {
+        newpob2[[s]][,4+a] <-  newpob2[[s]][,3+a] + newpob2[[s]][,3]
+    }
+}
+
+newpoball <- do.call(rbind, newpob2)
+
+names(newpoball)[-(1:2)] <- c("tasa",1:12)
+
+newpoball <- newpoball[,-3]
+
+meltpoball <- melt(newpoball, id.vars = c("AÑO", "INEGI"))
+
+names(meltpoball)[3:4] <- c("mes2", "poblacion")
+
+meltpoball$mes2 <- as.numeric(as.character(meltpoball$mes2))
+
+inner_join(homicidioslong2, meltpoball) -> homicidiosfinal
+
 
 ```
 
-Como primer paso en el análisis, se inspeccionan visualmente las tendencias de la incidencia de homicidios por mes. En la gráfica se observan dos patrones. Primero, la tendencia de los homicidios en la Ciudad de México ya presentaba una tendencia negativa desde el inicio de la serie, antes de que López Obrador asumiera la jefatura de gobierno (las líneas punteadas indican el período que gobernó López Obrador). La tendencia negativa continúa hasta alrededor de inicios del 2006, cuando se observa un incremento significativo hasta la fecha. Segundo, el patrón es muy similar al observado en el resto del país: una tendencia negativa desde el inicio de la serie desde 1998 hasta inicios del 2006, con incrementos significativos desde el 2006 a la fecha (y un descenso importante en 2015). Ello sugeriría que hay poca evidencia de un efecto "AMLO" en la reducción de los homicidios en la Ciudad de Mexico, pues el descenso inicio antes de su mandato, y el patrón fue muy similar al observado en el resto del país.
+Como primer paso en el análisis, se inspeccionan visualmente las tendencias de la incidencia de homicidios por mes. En la gráfica se observan dos patrones. Primero, la tendencia de los homicidios en la Ciudad de México ya presentaba una tendencia negativa desde el inicio de la serie, antes de que López Obrador asumiera la jefatura de gobierno (las líneas punteadas indican el período que gobernó López Obrador). La tendencia negativa continúa hasta alrededor de inicios del 2006, cuando se observa un incremento significativo hasta la fecha. Segundo, el patrón es muy similar al observado en el resto del país: una tendencia negativa desde el inicio de la serie desde 1998 hasta inicios del 2006, con incrementos significativos desde el 2006 a la fecha (y un descenso importante en 2015). Ello sugeriría que hay poca evidencia de un efecto "AMLO" en la reducción de los homicidios en la Ciudad de Mexico, pues el descenso inició antes de su mandato, y el patrón fue muy similar al observado en el resto del país.
 
 ```{r plot, fig.width=8, fig.height=4, echo=FALSE, include=TRUE}
 
 homicidiosfinal %>%
-    group_by(CDMX, AÑO, mes, mes3, period) %>%
-    summarise(homicidios = sum(homicidios)) -> homicidiosCDMX
+    group_by(I, AÑO, mes, mes3, period) %>%
+    summarise(homicidios = sum(homicidios),
+              poblacion = sum(poblacion)) %>%
+    mutate(tasahom = (homicidios/poblacion) * 100000) -> homicidiosCDMX
 
-homplotcdmx <- ggplot(homicidiosCDMX, aes(x = mes3, y = homicidios))
+homplotcdmx <- ggplot(homicidiosCDMX, aes(x = mes3, y = tasahom))
 
 homplotcdmx  + geom_line(alpha = 0.5) +
     stat_smooth(method = "loess", se = FALSE, span = .5, n = 100) +
-    facet_wrap(~ CDMX, scales = "free_y") +
+    facet_wrap(~ I, scales = "free_y") +
     geom_vline(xintercept = as.yearmon("2000-12"), linetype = 2) +
     geom_vline(xintercept = as.yearmon("2005-7"), linetype = 2) +
-    xlab("Enero 1998 a Octubre 2017 (mensual)") +
-    ylab("Homicidios absolutos") + theme_minimal()
+    xlab("Enero 1998 a Octubre 2017") +
+    ylab("Tasa de homicidios mensual (x 100k hab.)") + theme_minimal()
 
+# homplotcdmx2 <- ggplot(homicidiosCDMX, aes(x = mes3, y = homicidios))
+#
+# homplotcdmx2  + geom_line(alpha = 0.5) +
+#     stat_smooth(method = "loess", se = FALSE, span = .5, n = 100) +
+#     facet_wrap(~ I, scales = "free_y") +
+#     geom_vline(xintercept = as.yearmon("2000-12"), linetype = 2) +
+#     geom_vline(xintercept = as.yearmon("2005-7"), linetype = 2) +
+#     xlab("Enero 1998 a Octubre 2017") +
+#     ylab("Homicidos mensuales") + theme_minimal()
+#
 
 ```
 
-Sin embargo, es importante notar que la inspección visual de las tendencias es un método muy poco riguroso para determinar si existe o no un efecto significativo del gobierno de AMLO en la incidencia de homicidios. La gráfica se presenta solo con fines ilustrativos, para tener una idea de cómo se comportaron las tendencias en el período de estudio.[^notagrafica] Para poder determinar estadísticamente si AMLO tuvo un efecto en la incidencia de homicidios es necesario aplicar un modelo econométrico a los datos.
-
-[^notagrafica]: La gráfica presenta homicidios absolutos en lugar de la tasa de homicidios por dos razones. Primero, los datos de población por estado se derivan de las proyecciones demográficas que realiza la [CONAPO](http://www.conapo.gob.mx/es/CONAPO/Proyecciones_Datos). Dichas proyecciones estiman la población anual de cada estado con base en los resultados de los censos de población que realiza el INEGI. Dado que nuestros datos de homicidios son mensuales, sería necesario estimar la población por mes, lo cual incrementaría los errores en los datos. Si se utilizan las estimaciones anuales, la gráfica presentaría saltos abruptos cada doce meses por el cambio en el denominador. Dado que no se está comparando el total de los homicidios en la Ciudad de México y el resto del país, sino que se está observando la tendencia en ellos, utilizar las cifras absolutas es un medio apropiado para ello. Independientemente, dado que la población crece a un ritmo predecible (mientras que los datos de homicidio tienen mucha más variación), un análisis con tasas de homicidio daría resultados muy parecidos. De cualquier forma, en análisis estadístico de diferencias en diferencias sí utilizó los datos de población para calcular las tasas de homicidios.
-
+Sin embargo, es importante notar que la inspección visual de las tendencias es un método muy poco riguroso para determinar si existe o no un efecto significativo del gobierno de AMLO en la incidencia de homicidios. La gráfica se presenta solo con fines de ilustrar el comportamiento de las tendencias durante el período de estudio. Para poder determinar estadísticamente si AMLO tuvo un efecto en la incidencia de homicidios es necesario aplicar un modelo econométrico a los datos.
 
 # Diferencias en diferencias
 
-Idealmente, para establecer el efecto causal de una política pública en un fenómeno social se diseñaría un experimento con controles aleatorios. En este tipo de investigación se dividen al azar las unidades de estudio y se asigna la mitad a un grupo de control y la otra a un grupo experimental; se mide la variable dependiente en ambos grupos (en este caso los homicidios) antes de realizar la intervención; se realiza la intervención solo en el grupo experimental; y se mide la variable dependiente en ambos grupos. Se considera que la política tuvo un efecto causal si la diferencia entre las mediciones antes y después de la intervención en el grupo experimental es distinta la diferencia en el grupo de control.
+Idealmente, para establecer el efecto causal de una política pública en un fenómeno social se diseñaría un experimento con controles aleatorios. En este tipo de investigación se dividen al azar las unidades de estudio y se asigna la mitad a un grupo de control y la otra a un grupo experimental; se mide la variable dependiente en ambos grupos (en este caso los homicidios) antes de realizar la intervención; se realiza la intervención solo en el grupo experimental; y se mide la variable dependiente en ambos grupos. Se considera que la política tuvo un efecto causal si la diferencia entre las mediciones antes y después de la intervención en el grupo experimental es distinta de la diferencia en el grupo de control.
 
-Sin embargo, en el caso de este estudio, este tipo de diseños no es de utilidad. Por tanto, la segunda mejor manera de determinar la causalidad es con un [experimento natural](https://es.wikipedia.org/wiki/Experimento_natural). En este diseño no se tiene control sobre la asignación de las unidades a grupos de control o experimentales, pero la lógica es similar: Se comparan las mediciones antes y después de la intervención en un lugar donde ocurrió la intervención, con las mediciones antes y después en lugares donde no hubo intervención. Para evaluar si las diferencias entre las mediciones son estadísticamente significativas usualmente se utiliza el modelo estadístico de [Diferencias en Diferencias](https://es.wikipedia.org/wiki/Diferencias_en_diferencias). El modelo es ampliamente utilizado para estudiar [los efectos de las políticas públicas](https://www.annualreviews.org/doi/pdf/10.1146/annurev-publhealth-040617-013507) cuando no es posible o ético realizar experimentos aleatorios, e inclusive se ha utilizado para determinar [la efectividad de intervenciones de prevención del delito](http://journals.sagepub.com/doi/abs/10.1177/0193841X11433827).
+Sin embargo, en nuestro caso, este tipo de diseños no es de utilidad. Por tanto, la segunda mejor manera de determinar la causalidad es con un [experimento natural](https://es.wikipedia.org/wiki/Experimento_natural). En este diseño no se tiene control sobre la asignación de las unidades a grupos de control o experimentales, pero la lógica es similar: Se comparan las mediciones antes y después de la intervención en un lugar donde ocurrió la intervención, con las mediciones antes y después en lugares donde no hubo intervención. Para evaluar si las diferencias entre las mediciones son estadísticamente significativas usualmente se utiliza el modelo estadístico de [Diferencias en Diferencias](https://es.wikipedia.org/wiki/Diferencias_en_diferencias). El modelo es ampliamente utilizado para estudiar [los efectos de las políticas públicas](https://www.annualreviews.org/doi/pdf/10.1146/annurev-publhealth-040617-013507) cuando no es posible o ético realizar experimentos aleatorios, e inclusive se ha utilizado para determinar [la efectividad de intervenciones de prevención del delito](http://journals.sagepub.com/doi/abs/10.1177/0193841X11433827).
 
 Considerando el caso de los homicidios en la Ciudad de México, el modelo puede representarse por la siguiente ecuación:
 
 $$
-ln(homicidios/poblacion) = \beta_1 cdmx + \beta_2 periodo + \beta_3 periodo * cdmx
+ln(homicidios_{tj}/poblacion_{tj}) = \beta_0 + \beta_1 cdmx_j + \beta_2 periodo_t + \beta_3 periodo_t * cdmx_j + u_{e} + e_{tj}
 $$
 
-Donde la variable $homicidios$ representa el conteo mensual de homicidios en cada entidad federativa de enero 1998 a octubre de 2017, $poblacion$ corresponde a la población anual en cada entidad federativa, $cdmx$ es una variable binaria que indica si la observación corresponde a la Ciudad de México (y por tanto representa al grupo "experimental" bajo el gobierno de López Obrador), $periodo$ es una variable categórica que clasifica las observaciones temporales en tres períodos: antes de López Obrador (pre-Dic 2000), durante el gobierno de López Obrador (Dic 2000 -- Jul 2005), y después del gobierno de López Obrador. El coeficiente $\beta_1$ captura las diferencias globales entre la Ciudad de Mexico y el resto del país, mientras que $\beta_2$ captura las diferencias globales en la incidencia de homicidio entre los tres períodos. El efecto del gobierno de López Obrador en la incidencia de homicidio en la Ciudad de México lo captura el coeficiente $\beta_3$, por tanto, si López Obrador efectivamente redujo el homicidio en la ciudad durante su gobierno, esperaríamos ver un valor significativo y negativo en este coeficiente, $\beta_3 < 0$.
+Donde la variable $homicidios_{tj}$ representa el conteo de homicidios por cada mes $t$ en cada entidad federativa $j$ de enero 1998 a octubre de 2017, $poblacion_{tj}$ corresponde a la población en cada entidad federativa-mes, $cdmx_j$ es una variable binaria que indica si la observación corresponde a la Ciudad de México (y por tanto representa al grupo "experimental" bajo el gobierno de López Obrador), $periodo_t$ es una variable categórica que clasifica las observaciones temporales en tres períodos: antes de López Obrador (pre-Dic 2000), durante el gobierno de López Obrador (Dic 2000 -- Jul 2005), y después del gobierno de López Obrador. El coeficiente $\beta_0$ es el intercepto, el coeficiente $\beta_1$ captura las diferencias globales entre la Ciudad de Mexico y el resto del país, mientras que $\beta_2$ captura las diferencias globales en la incidencia de homicidio entre los tres períodos. El efecto del gobierno de López Obrador en la incidencia de homicidio en la Ciudad de México lo captura el coeficiente $\beta_3$, por tanto, si López Obrador efectivamente redujo el homicidio en la ciudad durante su gobierno, esperaríamos ver un valor significativo y negativo en este coeficiente, $\beta_3 < 0$. Finalmente, la variable $u_e$ representa los efectos aleatorios[^multi] de cada entidad federativa, mientras que $e_{tj}$ captura la sobredispersión de la [distribución binomial negativa](https://es.wikipedia.org/wiki/Distribución_binomial_negativa).[^nb]
 
-La implementación del modelo se hizo siguiendo la [distribución binomial negativa](https://es.wikipedia.org/wiki/Distribución_binomial_negativa), pues la variable dependiente es un conteo discreto con límite inferior de cero y sobredispersión. Se controlaron las diferencias entre entidades permitiendo la variación en los interceptos con un [modelo multinivel](https://es.wikipedia.org/wiki/Modelo_multinivel).
+[^nb]: Se utilizó la distribución binomial negativa pues la variable dependiente es un conteo discreto con límite inferior de cero y sobredispersión.
+
+[^multi]: Se controlaron las diferencias no-obseravdas entre entidades permitiendo la variación en los interceptos con un [modelo multinivel](https://es.wikipedia.org/wiki/Modelo_multinivel).
+
 
 ```{r dind}
 
-dindformula <- formula(homicidios ~ CDMX * period + offset(log(poblacion)))
+dindformula <- formula(homicidios ~ I * period + offset(log(poblacion)))
 
 dind_poisson <- glmmTMB(dindformula, data = homicidiosfinal, family = poisson)
 
@@ -258,14 +278,22 @@ mdind_nb_estimates$Significancia <- c("Significante", "NS", "Significante", "Sig
                                       "NS", "NS", "Significante", "Significante")
 
 knitr::kable(mdind_nb_estimates, digits = 2, align = c("r","r","r","c"),
-             caption = "Resultados del modelo DID. obs. = 7616, grupos = 32.")
+             caption = "Resultados del modelo DID. Obs. = 7616, grupos = 32.")
 
 
 ```
 
-Los resultados del modelo indican que **no hay evidencia de que el gobierno de López Obrador haya sido responsable por el descenso en la incidencia del homicidio en la Ciudad de México**. En cambio, los resultados sugieren que los cambios en la incidencia en la Ciudad de México probablemente se deban a cambios en el fenómeno delictivo a nivel nacional.
+Los resultados del modelo indican que, tras controlar por las diferencias no-observadas entre entidades federativas, la Ciudad de México no sufrió una incidencia de homicidio mensual distinta a la que se observó en el resto del país durante todo el período de observación. Entre enero del año 2000 y julio de 2005 se observó una caída nacional en la incidencia de homicidio de cerca del 19%[^exp], mientras que el período posterior a julio 2007 se asocia con un incremento del 8% en referencia al período previo a enero del 2000. Sin embargo, no se observa un efecto significativo en los coeficientes de la interacción entre las variables $cdmx$ y $periodo$. Ello sugiere que no hay evidencia de que el gobierno de López Obrador haya sido responsable por el descenso en la incidencia del homicidio en la Ciudad de México. Asimismo, tampoco hay evidencia de que la Ciudad de México haya sufrido una tendencia diferente a la del resto del país durante el período posterior a julio 2007, en referencia al período previo a enero del 2000.
 
-La evaluación de las políticas públicas es una actividad crucial para la vida democrática, pues provee información esencial para determinar la efectividad de quienes pretenden gobernarnos. Dar licencia a quienes nos gobiernos de adjudicarse logros que no son suyos es también una falta a la rendición de cuentas. Invito a la comunidad académica y a la sociedad civil a continuar este ejercicio apoyándose en datos duros y análisis rigurosos.
+[^exp]: Los efectos de las variables se obtienen de la exponencial de los coeficientes beta ($e^{\beta}$) presentados en la tabla de resultados.
+
+# Conclusiones
+
+El análisis sugiere que el descenso observado en la tasa de homicidio de la Ciudad de México durante el gobierno de López Obrador probablemente se deba a cambios en la dinámica delictiva observados a nivel nacional. No se encontró evidencia de que el gobierno de López Obrador haya tenido un efecto significativo en la reducción de homicidios en la Ciudad de México.
+
+Ello no significa que las políticas públicas durante el gobierno de López Obrador no hayan tenido algún efecto en el fenómeno delictivo local. Al tratarse de datos agregados a nivel entidad federativa, no es posible evaluar con estos datos cómo las políticas hayan afectado la distribución de los homicidios dentro de la Ciudad de México. Sin embargo, en el agregado total de homicidios observados en la Ciduad de México no se observó un efecto.
+
+La evaluación de las políticas públicas es una actividad crucial para la vida democrática, pues provee información esencial para determinar la efectividad de quienes pretenden gobernarnos. Invito a la comunidad académica y a la sociedad civil a continuar este ejercicio apoyándose en datos duros y análisis rigurosos, para así contribuir a una discusión pública basada en evidencias que ayude a la ciudadanía a emitir un voto informado.
 
 Los análisis presentados en este documento se pueden replicar con los archivos disponibles en la siguiente [liga](https://github.com/prestevez/homicidiosCDMX).
 
