--- a/DID_AMLO.Rmd
+++ b/DID_AMLO.Rmd
@@ -230,7 +230,7 @@ Sin embargo, en nuestro caso, este tipo de diseños no es de utilidad. Por tanto
 Considerando el caso de los homicidios en la Ciudad de México, el modelo puede representarse por la siguiente ecuación:
 
 $$
-ln(homicidios_{tj}/poblacion_{tj}) = \beta_0 + \beta_1 cdmx_j + \beta_2 periodo_t + \beta_3 periodo_t * cdmx_j + u_{e} + e_{tj}
+ln(homicidios_{tj}/poblacion_{tj}) = \beta_0 + \beta_1 cdmx_j + \beta_2 periodo_t + \beta_3 periodo_t * cdmx_j + u_{j} + e_{tj}
 $$
 
 Donde la variable $homicidios_{tj}$ representa el conteo de homicidios por cada mes $t$ en cada entidad federativa $j$ de enero 1998 a octubre de 2017, $poblacion_{tj}$ corresponde a la población en cada entidad federativa-mes, $cdmx_j$ es una variable binaria que indica si la observación corresponde a la Ciudad de México (y por tanto representa al grupo "experimental" bajo el gobierno de López Obrador), $periodo_t$ es una variable categórica que clasifica las observaciones temporales en tres períodos: antes de López Obrador (pre-Dic 2000), durante el gobierno de López Obrador (Dic 2000 -- Jul 2005), y después del gobierno de López Obrador. El coeficiente $\beta_0$ es el intercepto, el coeficiente $\beta_1$ captura las diferencias globales entre la Ciudad de Mexico y el resto del país, mientras que $\beta_2$ captura las diferencias globales en la incidencia de homicidio entre los tres períodos. El efecto del gobierno de López Obrador en la incidencia de homicidio en la Ciudad de México lo captura el coeficiente $\beta_3$, por tanto, si López Obrador efectivamente redujo el homicidio en la ciudad durante su gobierno, esperaríamos ver un valor significativo y negativo en este coeficiente, $\beta_3 < 0$. Finalmente, la variable $u_e$ representa los efectos aleatorios[^multi] de cada entidad federativa, mientras que $e_{tj}$ captura la sobredispersión de la [distribución binomial negativa](https://es.wikipedia.org/wiki/Distribución_binomial_negativa).[^nb]
